--- a/chickenapp/templates/contact.html
+++ b/chickenapp/templates/contact.html
@@ -4,7 +4,7 @@
 <div class="container">
         <div class="row">
             <div class="col-md-6 offset-4">
-            <h1> it's mothercluckin CONTACT PAAAAGE!</h1>
+            <h1> Contact Us</h1>
             <form action="" method="POST">
                 <fieldset>
                     <label for="Tell us your name.">Tell us your name.</label>
@@ -14,6 +14,7 @@
                     <label for="What would you like to talk to us about?">What would you like to talk to us about?</label>
                     {{ form.contact(class="form-control")}}
                 </fieldset>
+                <br>
                 <div>
                     {{ form.submit(class="btn btn-primary")}}
                 </div>
