--- a/chickenapp/templates/whatwedo.html
+++ b/chickenapp/templates/whatwedo.html
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" href="{{url_for('static', filename='second.css')}}">
+<!-- <link rel="stylesheet" href="{{url_for('static', filename='second.css')}}"> -->
 
 {% extends 'base.html' %}
 
@@ -36,19 +36,19 @@
         <p>Attorneys <br>Meet our prestigious partners and esteemed assosiates.</p>
       </div>
   </div>
+<!-- </div> -->
+  <div class="col-md">
+    <div >
+        Chicken: There are a few phrases/idioms related to chickens which can serve as chicken puns in the right context: “A chicken and egg situation” and “Chicken out of something” and “Don’t count your chickens before they’ve hatched” and “Chicken sh*t” and “Get up with the chickens” and “You’re chicken (scared)” and “Curses, like chickens, come home to roost” and “Chicken feed (small amount of money/something)”.
+      </div> 
+        <div>
+          <img class="pictures" src="https://images.unsplash.com/photo-1546833629-86e5534d5496" alt="chicks">
+          <img class="pictures" src="https://images.unsplash.com/photo-1551988689-74d7c589f1c1" alt="rooster">
+          <img class="pictures"src="https://images.unsplash.com/photo-1530059721-0fc1e6bb372d" alt="rooster">
+          <img class="pictures" src="https://images.unsplash.com/photo-1558216629-d0bee9ac4796" alt="rooster">
+        </div>
+    </div>  
 </div>
-    <div class="col-md-9">
-      <div >
-          Chicken: There are a few phrases/idioms related to chickens which can serve as chicken puns in the right context: “A chicken and egg situation” and “Chicken out of something” and “Don’t count your chickens before they’ve hatched” and “Chicken sh*t” and “Get up with the chickens” and “You’re chicken (scared)” and “Curses, like chickens, come home to roost” and “Chicken feed (small amount of money/something)”.
-       </div> 
-         <div>
-            <img class="pictures" src="https://images.unsplash.com/photo-1546833629-86e5534d5496" alt="chicks">
-            <img class="pictures" src="https://images.unsplash.com/photo-1551988689-74d7c589f1c1" alt="rooster">
-            <img class="pictures"src="https://images.unsplash.com/photo-1530059721-0fc1e6bb372d" alt="rooster">
-           <img class="pictures" src="https://images.unsplash.com/photo-1558216629-d0bee9ac4796" alt="rooster">
-         </div>
-     </div>  
-  </div>
 </div>
 
   <!--end sasha's from github-->
