--- a/chickenapp/templates/whoweare.html
+++ b/chickenapp/templates/whoweare.html
@@ -27,7 +27,7 @@
                         <a class="nav-link colorWhite fontSize" href="#">History</a>
                     </li>
                 </ul>
-                <div>
+                <!-- <div>
                     <img src="images/map.png" alt="Where we work map" class="imgStyle">
                     <div class="divStyle">
                         <span class="colorWhite"><b>Where We Work</b></span>
@@ -35,7 +35,7 @@
                             Find out more about our work coverage area.
                         </p>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="col-sm-8">
                 <p class="fontSize pWidth pMargin">
@@ -44,9 +44,9 @@
                     solving your problem. We invite you to get to know our attorneys better
                     and understand the depth of experience and talent we have in the links below.
                 </p>
-                <div class="divImg">
+                <!-- <div class="divImg">
                     <img src="images/home.png" alt="Who we are images" class="homeImg">
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
