--- a/chickenapp/templates/review.html
+++ b/chickenapp/templates/review.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-6 offset-4">
 
-            <h1> only give me five stars or just leave me alone.</h1>
+            <h1> Leave us some feedback.</h1>
 
             <form action="" method="POST">
                 <fieldset>
@@ -16,6 +16,7 @@
                     <label for="review">Review</label>
                     {{ form.review(class="form-control")}}
                 </fieldset>
+                <br>
                 <div>
                     {{ form.submit(class="btn btn-primary")}}
                 </div>
