--- a/chickenapp/templates/signinsignup.html
+++ b/chickenapp/templates/signinsignup.html
@@ -5,7 +5,7 @@
 <div class="container">
         <div class="row">
           <div class="col-md-6 offset-4">
-                <h1>cluckity cluck cluck</h1>
+                <h1>Register</h1>
             <form action="{{url_for('createChicken')}}" method="POST">
             {{ form.hidden_tag() }}
             <fieldset>
@@ -21,9 +21,10 @@
                 {{ form.password(class="form-control")}}
             </fieldset>
             <fieldset>
-                <label for="Confirm Password">Confirm Passyboo</label>
+                <label for="Confirm Password">Confirm Password</label>
                 {{form.confirm_pass(class="form-control")}}
             </fieldset>
+            <br>
             <div>
             {{ form.submit(class="btn btn-primary")}}
             </div>
@@ -35,7 +36,7 @@
 <div class="container">
         <div class="row">
             <div class="col-md-6 offset-4">
-            <h1>login peep peep peep</h1>
+            <h1>Login</h1>
             <form action="{{ url_for('login')}}" method="POST">
                 {{ loginform.hidden_tag() }}
                 <fieldset>
@@ -46,6 +47,7 @@
                     <label for="Password">Password</label>
                     {{ loginform.password(class="form-control")}}
                 </fieldset>
+                <br>
                 <div>
                     {{ loginform.submit(class = "btn btn-primary")}}
                 </div>
